# univalence-gravity

./: .gitignore  LICENSE  README.md  REPO_HASH.txt
backend/: README.md  backend.cabal  cabal.project  cabal.project.freeze
backend/app/: Main.hs
backend/src/: Api.hs  DataLoader.hs  Invariants.hs  Server.hs  Types.hs
backend/test/: ApiSpec.hs  InvariantSpec.hs
data/: curvature.json  meta.json  theorems.json  tower.json
data/patches/: dense-100.json  dense-200.json  dense-50.json  desitter.json  filled.json  honeycomb-3d.json  layer-54-d2.json  layer-54-d3.json  layer-54-d4.json  layer-54-d5.json  layer-54-d6.json  layer-54-d7.json  star.json  tree.json
docs/: 00-abstract.md  01-introduction.md  03-architecture.md  04-tooling.md  05-roadmap.md  07-references.md  10-frontier.md  CITATION.cff  README.md  dev-setup.md  refactoring.md  repo-close.md  repo-close_2.md  theory.tex
docs/engineering/: abstract-barrier.md  backend-spec-haskell.md  frontend-spec-webgl.md  generic-bridge-pattern.md  oracle-pipeline.md  orbit-reduction.md  scaling-report.md
docs/formal/: 01-theorems.md  02-foundations.md  03-holographic-bridge.md  04-discrete-geometry.md  05-gauge-theory.md  06-causal-structure.md  07-quantum-superposition.md  08-wick-rotation.md  09-thermodynamics.md  10-dynamics.md  11-generic-bridge.md  12-bekenstein-hawking.md
docs/getting-started/: abstract.md  architecture.md  building.md  setup.md
docs/historical/: README.md
docs/history/: OpenRouterGUI.7z  OpenRouterGUI_Historic.7z  SomeSystemPrompts.txt  assemble_context.bat  assemble_context.ps1
docs/instances/: dense-100.md  dense-1000.md  dense-200.md  dense-50.md  desitter-patch.md  filled-patch.md  honeycomb-145.md  honeycomb-3d.md  layer-54-tower.md  star-patch.md  tree-pilot.md
docs/papers/: theory.tex
docs/physics/: discrete-bekenstein-hawking.md  five-walls.md  holographic-dictionary.md  three-hypotheses.md  translation-problem.md
docs/reference/: assumptions.md  bibliography.md  glossary.md  module-index.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/tests/: api.test.ts  setup.ts  types.test.ts
sim/prototyping/: 01_happy_patch_cuts.py  01_happy_patch_cuts_OUTPUT.txt  02_happy_patch_curvature.py  02_happy_patch_curvature_OUTPUT.txt  03_generate_filled_patch.py  03_generate_filled_patch_OUTPUT.txt  04_generate_raw_equiv.py  04_generate_raw_equiv_OUTPUT.txt  05_honeycomb_3d_prototype.py  05_honeycomb_3d_prototype_OUTPUT.txt  06_generate_honeycomb_3d.py  06_generate_honeycomb_3d_OUTPUT.txt  06b_generate_honeycomb145.py  06b_generate_honeycomb145_OUTPUT.txt  07_honeycomb_3d_multiStrategy.py  07_honeycomb_3d_multiStrategy_OUTPUT.txt  07b_honeycomb_3d_multiStrategy_reviewed.py  07b_honeycomb_3d_multiStrategy_reviewed_OUTPUT.txt  07c_honeycomb_3d_multiStrategy_hemisphere.py  07c_honeycomb_3d_multiStrategy_hemisphere_OUTPUT.txt  08_generate_dense50.py  08_generate_dense50_OUTPUT.txt  09_generate_dense100.py  09_generate_dense100_OUTPUT.txt  10_desitter_prototype.py  10_desitter_prototype_OUTPUT.txt  11_generate_area_law.py  11_generate_area_law_OUTPUT.txt  12_generate_dense200.py  12_generate_dense200_OUTPUT.txt  12b_generate_dense1000.py  12b_generate_dense1000_OUTPUT.txt  13_generate_layerN.py  13_generate_layerN_OUTPUT.txt  14_entropic_convergence.py  14_entropic_convergence_OUTPUT.txt  14b_entropic_convergence_controlled.py  14b_entropic_convergence_controlled_OUTPUT.txt  14c_entropic_convergence_sup_half.py  14c_entropic_convergence_sup_half_OUTPUT.txt  (+10 more)
src/Boundary/: Dense1000AreaLaw.agda  Dense1000Cut.agda  Dense1000HalfBound.agda  Dense100AreaLaw.agda  Dense100AreaLaw.agdai  Dense100Cut.agda  Dense100Cut.agdai  Dense100HalfBound.agda  Dense100HalfBound.agdai  Dense200AreaLaw.agda  Dense200AreaLaw.agdai  Dense200Cut.agda  Dense200Cut.agdai  Dense200HalfBound.agda  Dense200HalfBound.agdai  Dense50Cut.agda  Dense50Cut.agdai  FilledCut.agda  FilledCut.agdai  FilledSubadditivity.agda  FilledSubadditivity.agdai  Honeycomb145Cut.agda  Honeycomb145Cut.agdai  Layer54d2Cut.agda  (+21 more)
(+259 files in other folders)
